[package]
name = "change-volume-of-all"
version = "0.1.0"
authors = ["Nikola Kocic <nikolakocic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpulse-binding = "2.13.0"
log = "0.4.6"

[dependencies.env_logger]
version = "0.6.2"
default-features = false
features = ["termcolor", "atty", "humantime"]
